--- a/pages/bio.html
+++ b/pages/bio.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="description" content="Información relacionada con Paul McCartney, sitio no oficial del artista, noticias, shows y biografía">
+    <meta name="description"
+        content="Información relacionada con Paul McCartney, sitio no oficial del artista, noticias, shows y biografía">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Tangerine">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="../css/bootstrap.min.css">
@@ -15,7 +16,8 @@
 <body>
     <header class="navBackground">
         <div class="container nav">
-            <a href="./../index.html"><img src="./../assets/logo.png" class="img-logo" alt="logo sitio" height="40" width="200"></a> 
+            <a href="./../index.html"><img src="./../assets/logo.png" class="img-logo" alt="logo sitio" height="40"
+                    width="200"></a>
             <nav class="navbar navbar-expand-lg">
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
@@ -40,20 +42,32 @@
             <h1 class="fs-1 mx-3 my-3">Biografía</h1>
 
             <article>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias atque, accusantium quas error expedita
-                    asperiores explicabo doloremque consequatur aut est dolorum libero incidunt dicta commodi eaque
-                    nesciunt
-                    magnam veniam voluptate.</p>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ullam corrupti exercitationem odit, neque
-                    nemo
-                    laborum hic omnis maiores deserunt non est, aut eveniet autem aperiam veniam harum molestias
-                    praesentium
-                    tempore.</p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto, impedit illum aut pariatur excepturi
-                    est
-                    nam? Harum nostrum possimus reiciendis odit! Harum nemo tempore at debitis, doloremque quisquam
-                    quibusdam
-                    dolorem.</p>
+                <p>James Paul McCartney nació el 18 de junio de 1942 en el Hospital Walton,
+                    en Liverpool, Inglaterra, donde su madre, Mary Patricia (nombre de soltera,
+                    Mohin) (1909-1956), había trabajado como enfermera. Su padre, James («Jim»)
+                    McCartney (1902-1976), se hallaba ausente durante el nacimiento de su hijo
+                    debido a su labor voluntaria como bombero durante la batalla de Inglaterra.​
+                    Paul tiene un hermano menor, Michael, nacido el 7 de enero de 1944.
+                    Aunque fueron bautizados por la iglesia de su madre, católica, su padre era
+                    protestante y más tarde se volvió agnóstico, por lo que ninguna religión fue
+                    practicada en casa.
+                </p>
+                <p>Comenzó sus estudios en la Escuela Primaria de Stockton Wood Road en Speke,
+                    a la cual asistió desde 1947 hasta 1949, año en que fue trasladado al
+                    colegio Joseph Williams Junior School en Belle Vale debido a la
+                    superpoblación de alumnos en Stockton.9​ En 1953, aprobó el examen
+                    11-plus, junto a otros tres de un total de noventa examinados,
+                    ganando así su admisión al prestigioso Liverpool Institute.
+                    En 1954, conoció al también estudiante George Harrison en el autobús que
+                    iba al instituto desde sus casas en Speke. Harrison había aprobado también
+                    el examen, lo que significaba que podía asistir a una grammar school en
+                    lugar de una secondary modern school, donde la mayoría de los estudiantes
+                    asistían hasta estar aptos para laborar. Rápidamente se volvieron amigos;
+                    McCartney admitiría posteriormente: «Tendía a hablarle con superioridad
+                    porque era un año más joven.»11
+                    ​</p>
+
+
             </article>
 
             <article class="iframe">
@@ -74,7 +88,7 @@
                     <img src="../assets/logo.png" alt="logo sitio" height="40" width="200">
                 </div>
                 <div class="col-md-4 col-sm-12 ">
-            <label class=" footer-title">Mapa del sitio</label>
+                    <label class=" footer-title">Mapa del sitio</label>
                     <ul class="footer-list">
                         <li><a href="./../index.html">Home</a></li>
                         <li><a href="./bio.html">Bio</a></li>
